--- a/Client-UI/src/app/@theme/components/header/header.component.html
+++ b/Client-UI/src/app/@theme/components/header/header.component.html
@@ -18,11 +18,12 @@
     </nb-action> -->
     <!-- <nb-action class="control-item" icon="email-outline"></nb-action>
     <nb-action class="control-item" icon="bell-outline"></nb-action> -->
-    <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
+    <nb-action class="user-action" >
       <nb-user [nbContextMenu]="userMenu"
                [onlyPicture]="userPictureOnly"
-               [name]="user?.name"
-               [picture]="user?.picture">
+               [name]="user?.unique_name"
+               [picture]="user?.picture"
+               nbContextMenuTag="user-info-menu">
       </nb-user>
     </nb-action>
   </nb-actions>
