--- a/Client-UI/src/app/Auth/components/login/assets/css/main.css
+++ b/Client-UI/src/app/Auth/components/login/assets/css/main.css
@@ -348,6 +348,7 @@ iframe {
   position: relative;
   padding-left: 26px;
   cursor: pointer;
+  padding-right: 25px;
 }
 
 .label-checkbox100::before {
@@ -369,7 +370,7 @@ iframe {
   border-radius: 3px;
   background: #fff;
   border: 2px solid #d33f8d;
-  left: 0;
+  right: 0;
   top: 48%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
@@ -490,7 +491,7 @@ iframe {
 }
 
 .alert-validate::before {
-  content: attr(data-validate);
+  content:attr(data-validate);
   position: absolute;
   max-width: 70%;
   background-color: white;
@@ -503,7 +504,7 @@ iframe {
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  right: 8px;
+  left: 8px;
   pointer-events: none;
 
   font-family: Raleway-SemiBold;
@@ -527,20 +528,23 @@ iframe {
   display: block;
   position: absolute;
   color: #c80000;
-  font-size: 15px;
+  font-size: 24px;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  right: 13px;
+  left: 2%;
 }
-
+.alert-validate:hover::after{
+visibility: hidden;
+}
 .alert-validate:hover:before {
   visibility: visible;
   opacity: 1;
 }
+
 
 @media (max-width: 992px) {
   .alert-validate::before {
