--- a/Client-UI/src/app/Auth/components/login/login.component.html
+++ b/Client-UI/src/app/Auth/components/login/login.component.html
@@ -105,25 +105,76 @@
   Don't have an account? <a class="text-link" routerLink="../register">Register</a>
 </section> -->
 
-	
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100 p-l-50 p-r-50 p-t-77 p-b-30">
-				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-55">
-						Login
+        <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
+          <p class="alert-title"><b>Oh snap!</b></p>
+          <ul class="alert-message-list">
+            <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
+          </ul>
+        </nb-alert>
+        
+        <nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
+          <p class="alert-title"><b>Hooray!</b></p>
+          <ul class="alert-message-list">
+            <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
+          </ul>
+        </nb-alert>
+				<form class="login100-form validate-form" (ngSubmit)="login()" #form="ngForm">
+					<span id="title" class="login100-form-title p-b-55">
+          {{"login.header"|translate}}
 					</span>
 
-					<div class="wrap-input100 validate-input m-b-16" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
-						<span class="focus-input100"></span>
-						<span class="symbol-input100">
-							<span class="lnr lnr-envelope"></span>
-						</span>
+					<div  attr.data-validate="{{'login.username-invalid'|translate}}" class="wrap-input100 validate-input m-b-16"   >
+            <input class="input100" type="text"
+            [(ngModel)]="user.email"
+           #email="ngModel"
+           name="email"
+           id="input-email"
+           placeholder="{{'login.username'|translate}}"
+           required
+          >
+          <span class="focus-input100"></span>
+          <span class="symbol-input100">
+            <span class="lnr lnr-envelope"></span>
+          </span>
+           <ng-container *ngIf="email.invalid && email.touched">
+            <p class="error-message" *ngIf="email.errors?.required">
+              {{'login.username-is-required'|translate}}
+            </p>
+            <!-- <p class="error-message" *ngIf="email.errors?.pattern">
+              Email should be the real one!
+            </p> -->
+          </ng-container>
+					
 					</div>
 
-					<div class="wrap-input100 validate-input m-b-16" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+					<div class="wrap-input100 validate-input m-b-16" attr.data-validate = "{{'login.password-invalid'| translate}}">
+            <input class="input100"
+             type="password" 
+             placeholder="{{'login.password'|translate}}"
+             [(ngModel)]="user.password"
+            #password="ngModel"
+            name="password"
+           id="input-password"
+        
+            required
+           [minlength]="getConfigValue('forms.validation.password.minLength')"
+           [maxlength]="getConfigValue('forms.validation.password.maxLength')"
+           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
+           <ng-container *ngIf="password.invalid && password.touched ">
+            <p class="error-message" *ngIf="password.errors?.required">
+            {{'login.Password-is-required'|translate}}
+            </p>
+            <p class="error-message" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+              Password should contains
+              from {{ getConfigValue('forms.validation.password.minLength') }}
+              to {{ getConfigValue('forms.validation.password.maxLength') }}
+              characters
+            </p>
+          </ng-container>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<span class="lnr lnr-lock"></span>
@@ -131,44 +182,27 @@
 					</div>
 
 					<div class="contact100-form-checkbox m-l-4">
-						<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+					  <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
 						<label class="label-checkbox100" for="ckb1">
-							Remember me
-						</label>
+            {{"login.remember-me"|translate}}
+            </label>
+          
 					</div>
 					
 					<div class="container-login100-form-btn p-t-25">
-						<button class="login100-form-btn">
-							Login
+						<button class="login100-form-btn" [disabled]="submitted || !form.valid"
+            [class.btn-pulse]="submitted">
+            {{"login.btn.login"|translate}}
 						</button>
 					</div>
 
-					<div class="text-center w-full p-t-42 p-b-22">
-						<span class="txt1">
-							Or login with
-						</span>
-					</div>
+				
 
-					<a href="#" class="btn-face m-b-10">
-						<i class="fa fa-facebook-official"></i>
-						Facebook
-					</a>
-
-					<a href="#" class="btn-google m-b-10">
-						<img src="assets/login/images/icons/icon-google.png" alt="GOOGLE">
-						Google
-					</a>
-
-					<div class="text-center w-full p-t-115">
-						<span class="txt1">
-							Not a member?
-						</span>
-
-						<a class="txt1 bo1 hov1" href="#">
-							Sign up now							
-						</a>
-					</div>
+				
 				</form>
 			</div>
 		</div>
-	</div>
+  </div>
+ <div id="scripts">
+
+ </div>
