--- a/Client-UI/src/app/@theme/styles/themes.scss
+++ b/Client-UI/src/app/@theme/styles/themes.scss
@@ -2,8 +2,11 @@
 @import '~@nebular/theme/styles/theming';
 // @nebular out of the box themes
 @import '~@nebular/theme/styles/themes';
+@import '../../../assets/Fonts/persian-font.scss';
 
 $nb-themes: nb-register-theme((
+  font-family-primary:"iran-sans",
+  font-family-secondary:"iran-sansbold",
   layout-padding-top: 2.25rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
@@ -25,6 +28,8 @@ $nb-themes: nb-register-theme((
 ), default, default);
 
 $nb-themes: nb-register-theme((
+  font-family-primary:"iran-sans",
+  font-family-secondary:"iran-sansbold",
   layout-padding-top: 2.25rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
@@ -46,6 +51,8 @@ $nb-themes: nb-register-theme((
 ), cosmic, cosmic);
 
 $nb-themes: nb-register-theme((
+  font-family-primary:"iran-sans",
+  font-family-secondary:"iran-sansbold",
   menu-text-font-size:0.875rem,
   layout-padding-top: 2.25rem,
 
@@ -68,6 +75,8 @@ $nb-themes: nb-register-theme((
 ), corporate, corporate);
 
 $nb-themes: nb-register-theme((
+  font-family-primary:"iran-sans",
+  font-family-secondary:"iran-sansbold",
   layout-padding-top: 2.25rem,
 
   menu-item-icon-margin: 0 0.5rem 0 0,
