--- a/Client-UI/src/app/@theme/components/header/header.component.html
+++ b/Client-UI/src/app/@theme/components/header/header.component.html
@@ -2,12 +2,12 @@
   <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
     <nb-icon icon="menu-2-outline"></nb-icon>
   </a>
-  <div class="logo-container">
+  <div class="logo-container d-none d-sm-flex">
     
     <img class="logo" src="assets/Agri-bank_logo.png" style="
     width: 37%;
 ">
-    <a class="logo" href="#" (click)="navigateHome()"> {{"login.header"|translate}}
+    <a class="logo d-none d-md-block" href="#" (click)="navigateHome()"> {{"login.header"|translate}}
       <span style="color: #28a745;"> {{"logo"|translate}}</span></a>
   </div>
   <!-- <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
